--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -8,13 +8,15 @@
     
 }
 .ivm_zrame{
-    width: 30%; 
-    height: 28%; 
+    width: 35.2%;
+    height: 35.2%;
     display: inline; 
-    left: 1.5%;  
-    top: 43%; 
+    left: 4%;  
+    top: 42.1%; 
     position: absolute;
     overflow: hidden;
+    border-top-right-radius: 35%;
+    border-bottom-left-radius: 32%;
 }
 #ivm_frame{
     width: 100%;
@@ -25,7 +27,6 @@
     background: #999;
 }
 #ivm_igar{
-    background: #E1E1E1;
     z-index: 5;
     color: black;
     font-size: 3vmin;
@@ -33,5 +34,5 @@
     padding-right: 2%;
     padding-top: 2%;
     overflow: hidden;
-    text-align: center;
+	text-align: center;
 }
